@@ -6,6 +6,7 @@ import com.resend.services.emails.model.Attachment;
 import com.resend.services.emails.model.CreateEmailOptions;
 import dev.jos.back.dto.payment.TransactionResponseDTO;
 import dev.jos.back.exceptions.email.EmailNotSentException;
+import dev.jos.back.util.enums.SupportedLocale;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -14,50 +15,44 @@ import org.thymeleaf.context.Context;
 import org.thymeleaf.spring6.SpringTemplateEngine;
 
 import java.time.format.DateTimeFormatter;
-import java.util.Base64;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
+import java.util.*;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class EmailService {
 
-    private static final Map<String, DateTimeFormatter> DATE_FORMATTERS = Map.of(
-            "fr", DateTimeFormatter.ofPattern("d MMMM yyyy 'à' HH:mm", Locale.FRENCH),
-            "en", DateTimeFormatter.ofPattern("MMMM d, yyyy 'at' HH:mm", Locale.ENGLISH),
-            "de", DateTimeFormatter.ofPattern("d. MMMM yyyy 'um' HH:mm", Locale.GERMAN),
-            "es", DateTimeFormatter.ofPattern("d 'de' MMMM 'de' yyyy 'a las' HH:mm", new Locale("es"))
-    );
+    private static final EnumMap<SupportedLocale, DateTimeFormatter> DATE_FORMATTERS =
+            new EnumMap<>(Map.of(
+                    SupportedLocale.FR, DateTimeFormatter.ofPattern("d MMMM yyyy 'à' HH:mm", Locale.FRENCH),
+                    SupportedLocale.EN, DateTimeFormatter.ofPattern("MMMM d, yyyy 'at' HH:mm", Locale.ENGLISH),
+                    SupportedLocale.DE, DateTimeFormatter.ofPattern("d. MMMM yyyy 'um' HH:mm", Locale.GERMAN),
+                    SupportedLocale.ES, DateTimeFormatter.ofPattern("d 'de' MMMM 'de' yyyy 'a las' HH:mm", Locale.of("es"))
+            ));
 
-    private static final Map<String, String> RESET_SUBJECTS = Map.of(
-            "fr", "Réinitialisation de mot de passe",
-            "en", "Password reset",
-            "de", "Passwort zurücksetzen",
-            "es", "Restablecimiento de contraseña"
-    );
+    private static final EnumMap<SupportedLocale, String> RESET_SUBJECTS =
+            new EnumMap<>(Map.of(
+                    SupportedLocale.FR, "Réinitialisation de mot de passe",
+                    SupportedLocale.EN, "Password reset",
+                    SupportedLocale.DE, "Passwort zurücksetzen",
+                    SupportedLocale.ES, "Restablecimiento de contraseña"
+            ));
 
-    private static final Map<String, String> OTP_SUBJECTS = Map.of(
-            "fr", "Votre compte JO - Code de sécurité",
-            "en", "Your JO account - Security code",
-            "de", "Dein JO-Konto - Sicherheitscode",
-            "es", "Tu cuenta JO - Código de seguridad"
-    );
+    private static final EnumMap<SupportedLocale, String> OTP_SUBJECTS =
+            new EnumMap<>(Map.of(
+                    SupportedLocale.FR, "Votre compte JO - Code de sécurité",
+                    SupportedLocale.EN, "Your JO account - Security code",
+                    SupportedLocale.DE, "Dein JO-Konto - Sicherheitscode",
+                    SupportedLocale.ES, "Tu cuenta JO - Código de seguridad"
+            ));
 
-    private static final Map<String, String> TICKET_SUBJECTS = Map.of(
-            "fr", "Vos billets Paris 2024 — ",
-            "en", "Your Paris 2024 tickets — ",
-            "de", "Ihre Paris 2024-Tickets — ",
-            "es", "Sus entradas para París 2024 — "
-    );
-
-    private static final Map<String, String> AMOUNT_FORMATS = Map.of(
-            "fr", "%.2f\u00a0€",
-            "en", "%.2f\u00a0€",
-            "de", "%.2f\u00a0€",
-            "es", "%.2f\u00a0€"
-    );
+    private static final EnumMap<SupportedLocale, String> TICKET_SUBJECTS =
+            new EnumMap<>(Map.of(
+                    SupportedLocale.FR, "Vos billets Paris 2024 — ",
+                    SupportedLocale.EN, "Your Paris 2024 tickets — ",
+                    SupportedLocale.DE, "Ihre Paris 2024-Tickets — ",
+                    SupportedLocale.ES, "Sus entradas para París 2024 — "
+            ));
 
     private final SpringTemplateEngine templateEngine;
 
@@ -66,24 +61,6 @@ public class EmailService {
 
     @Value("${resend.from}")
     private String from;
-
-    // -------------------------------------------------------------------------
-    // Internal helpers
-    // -------------------------------------------------------------------------
-
-    private String resolveLocale(String locale) {
-        if (locale == null || locale.isBlank()) return "fr";
-        return locale.split("[,;\\-]")[0].trim().toLowerCase();
-    }
-
-    private Locale toJavaLocale(String lang) {
-        return switch (lang) {
-            case "en" -> Locale.ENGLISH;
-            case "de" -> Locale.GERMAN;
-            case "es" -> new Locale("es");
-            default -> Locale.FRENCH;
-        };
-    }
 
     private void sendEmail(String to, String subject, String html) {
         CreateEmailOptions params = CreateEmailOptions.builder()
@@ -118,51 +95,37 @@ public class EmailService {
         }
     }
 
-    // -------------------------------------------------------------------------
-    // Public API
-    // -------------------------------------------------------------------------
-
     public void sendPasswordResetEmail(String to, String name, String resetLink, String locale) {
-        String lang = resolveLocale(locale);
-        Context context = new Context(toJavaLocale(lang));
+        SupportedLocale sl = SupportedLocale.from(locale);
+        Context context = new Context(sl.javaLocale);
         context.setVariable("name", name);
         context.setVariable("resetLink", resetLink);
-        String subject = RESET_SUBJECTS.getOrDefault(lang, RESET_SUBJECTS.get("fr"));
-        sendEmail(to, subject, templateEngine.process("email/forget-password", context));
+        sendEmail(to, RESET_SUBJECTS.get(sl), templateEngine.process("email/forget-password", context));
     }
 
     public void sendTwoFactorEmail(String email, String name, String code, int expirationMinutes, String locale) {
-        String lang = resolveLocale(locale);
-        Context context = new Context(toJavaLocale(lang));
+        SupportedLocale sl = SupportedLocale.from(locale);
+        Context context = new Context(sl.javaLocale);
         context.setVariable("name", name);
         context.setVariable("code", code);
         context.setVariable("expirationMinutes", expirationMinutes);
-        String subject = OTP_SUBJECTS.getOrDefault(lang, OTP_SUBJECTS.get("fr"));
-        sendEmail(email, subject, templateEngine.process("email/otp-code", context));
+        sendEmail(email, OTP_SUBJECTS.get(sl), templateEngine.process("email/otp-code", context));
     }
 
     public void sendTicketsEmail(String to, String name, TransactionResponseDTO transaction, byte[] pdfBytes) {
         sendTicketsEmail(to, name, transaction, pdfBytes, "fr");
     }
-
+    
     public void sendTicketsEmail(String to, String name, TransactionResponseDTO transaction,
                                  byte[] pdfBytes, String locale) {
-        String lang = resolveLocale(locale);
-
-        DateTimeFormatter dateFmt = DATE_FORMATTERS.getOrDefault(lang, DATE_FORMATTERS.get("fr"));
+        SupportedLocale sl = SupportedLocale.from(locale);
+        DateTimeFormatter dateFmt = DATE_FORMATTERS.get(sl);
         String formattedDate = transaction.payedDate() != null
                 ? transaction.payedDate().format(dateFmt)
                 : "—";
+        String formattedAmount = String.format(sl.javaLocale, "%.2f\u00a0€", transaction.amount());
 
-        Locale priceLocale = switch (lang) {
-            case "en" -> Locale.ENGLISH;
-            case "de" -> Locale.GERMAN;
-            case "es" -> new Locale("es");
-            default -> Locale.FRENCH;
-        };
-        String formattedAmount = String.format(priceLocale, "%.2f\u00a0€", transaction.amount());
-
-        Context context = new Context(toJavaLocale(lang));
+        Context context = new Context(sl.javaLocale);
         context.setVariable("name", name);
         context.setVariable("paymentReference", transaction.paymentReference());
         context.setVariable("payedDate", formattedDate);
@@ -170,14 +133,13 @@ public class EmailService {
         context.setVariable("amount", formattedAmount);
 
         String html = templateEngine.process("email/ticket-confirmation", context);
-
         String filename = "billets-jo2024-" + transaction.paymentReference() + ".pdf";
         Attachment attachment = Attachment.builder()
                 .fileName(filename)
                 .content(Base64.getEncoder().encodeToString(pdfBytes))
                 .build();
 
-        String subjectPrefix = TICKET_SUBJECTS.getOrDefault(lang, TICKET_SUBJECTS.get("fr"));
+        String subjectPrefix = TICKET_SUBJECTS.get(sl);
         sendEmailWithAttachment(to, subjectPrefix + transaction.paymentReference(), html, attachment);
     }
 }
